estrutura do form.

--- a/form.html
+++ b/form.html
@@ -23,7 +23,7 @@
        <textarea cols="60" rows="10"></textarea><br>
        <button>Enviar</button>
     </form>
-    </main>
+    </main>''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
     
 </body>
 </html>
